[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Larion Babych <larion.babych@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.23.4"
numpy = "^1.14.5"

ipython = "^6.4.0"
jupyter = "^1.0.0"
matplotlib = "^3.1.3"
jupyterlab = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
